--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,22 @@
 services:
-  stats-server:
+  statservice:
     ports:
       - "9090:9090"
 
   stats-db:
     image: postgres:16.1
+    container_name: postgres
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_PASSWORD=statservice
+      - POSTGRES_USER=statservice
+      - POSTGRES_DB=statservice
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
 
   ewm-service:
     ports:
@@ -12,3 +24,4 @@ services:
 
   ewm-db:
     image: postgres:16.1
+    container_name: postgres
