--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,21 @@
 services:
-  stats-server:
+  statservice:
+    build:
+      context: ./statservice
     ports:
       - "9090:9090"
 
   stats-db:
     image: postgres:16.1
-
-  ewm-service:
+    container_name: postgres
     ports:
-      - "8080:8080"
-
-  ewm-db:
-    image: postgres:16.1
+      - "5433:5432"
+    environment:
+      - POSTGRES_PASSWORD=statservice
+      - POSTGRES_USER=statservice
+      - POSTGRES_DB=statservice
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
