--- a/stats-server/pom.xml
+++ b/stats-server/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>statservice</artifactId>
+    <artifactId>stats-server</artifactId>
 
 
     <properties>
@@ -28,7 +28,7 @@
         </dependency>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>httpstatservice</artifactId>
+            <artifactId>stats-service-server</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
