--- a/ewm-service/pom.xml
+++ b/ewm-service/pom.xml
@@ -9,7 +9,7 @@
         <version>0.0.1-SNAPSHOT</version>
     </parent>
 
-    <artifactId>mainservice</artifactId>
+    <artifactId>ewm-service</artifactId>
 
     <dependencies>
         <dependency>
