--- a/stats-server/src/main/resources/application.properties
+++ b/stats-server/src/main/resources/application.properties
@@ -14,9 +14,9 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/statservice
-spring.datasource.username=statservice
-spring.datasource.password=statservice
+spring.datasource.url=jdbc:postgresql://localhost:5433/stats-server
+spring.datasource.username=stats-server
+spring.datasource.password=stats-server
 
 hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 hibernate.show_sql=true
