--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
 services:
   stats-server:
+    build:
+      context: ./stats-server
     ports:
       - "9090:9090"
     depends_on:
@@ -21,6 +23,8 @@ services:
       retries: 10
 
   ewm-service:
+    build:
+      context: ./ewm-service
     ports:
       - "8080:8080"
 
