--- a/stats-server/pom.xml
+++ b/stats-server/pom.xml
@@ -10,6 +10,13 @@
     </parent>
 
     <artifactId>stats-server</artifactId>
+    <packaging>pom</packaging>
+
+    <modules>
+        <module>dtoall</module>
+        <module>stats-service-server</module>
+        <module>http-client</module>
+    </modules>
 
 
     <properties>
@@ -36,17 +43,5 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
     </dependencies>
-    <build>
-        <plugins>
-            <!-- Плагин для Spring Boot -->
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-                <configuration>
-                    <mainClass>ru.practicum.Application</mainClass> <!-- Указываем главный класс -->
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
