--- a/ewm-service/src/main/resources/application.properties
+++ b/ewm-service/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://ewm-db:5434/ewm-service
+spring.datasource.url=jdbc:postgresql://localhost:5436/ewm-service
 spring.datasource.username=ewm-service
 spring.datasource.password=ewm-service
 
