--- a/stats-server/stats-service-server/pom.xml
+++ b/stats-server/stats-service-server/pom.xml
@@ -40,6 +40,7 @@
             <groupId>ru.practicum</groupId>
             <artifactId>dto-exception-enums</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
