--- a/ewm-service/ewm/pom.xml
+++ b/ewm-service/ewm/pom.xml
@@ -66,24 +66,25 @@
             <version>2.17.2</version>
         </dependency>
         <dependency>
-            <groupId>ru.practicum</groupId>
-            <artifactId>dto-exception-enums</artifactId>
-            <version>0.0.1-SNAPSHOT</version>
-        </dependency>
-        <dependency>
             <groupId>jakarta.validation</groupId>
             <artifactId>jakarta.validation-api</artifactId>
             <version>3.0.2</version>
         </dependency>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>dto-stats</artifactId>
+            <artifactId>http-client</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>ru.practicum</groupId>
-            <artifactId>http-client</artifactId>
+            <artifactId>dto-exception-enums</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>dto-stats</artifactId>
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
