--- a/stats-server/http-client/pom.xml
+++ b/stats-server/http-client/pom.xml
@@ -78,6 +78,13 @@
             <groupId>ru.practicum</groupId>
             <artifactId>dto-stats</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ru.practicum</groupId>
+            <artifactId>dto-exception-enums</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
