--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,8 @@ services:
       - "9090:9090"
     depends_on:
       - stats-db
+    networks:
+      - app_network
 
   stats-db:
     image: postgres:16.1
@@ -21,6 +23,9 @@ services:
       timeout: 5s
       interval: 5s
       retries: 10
+    networks:
+      - app_network
+
 
   ewm-service:
     build:
@@ -29,6 +34,8 @@ services:
       - "8080:8080"
     depends_on:
       - ewm-db
+    networks:
+    - app_network
 
   ewm-db:
     image: postgres:16.1
@@ -44,3 +51,9 @@ services:
       timeout: 5s
       interval: 5s
       retries: 10
+    networks:
+        - app_network
+
+networks:
+  app_network:
+    driver: bridge
