--- a/stats-server/stats-service-server/src/main/resources/application.properties
+++ b/stats-server/stats-service-server/src/main/resources/application.properties
@@ -14,7 +14,7 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=DEBUG
 
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/stats-server 
+spring.datasource.url=jdbc:postgresql://stats-db:5432/stats-server
 spring.datasource.username=stats-server
 spring.datasource.password=stats-server
 
