--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   stats-server:
     build:
-      context: ./stats-server
+      context: ./stats-server/stats-service-server
     ports:
       - "9090:9090"
     depends_on:
@@ -24,9 +24,23 @@ services:
 
   ewm-service:
     build:
-      context: ./ewm-service
+      context: ./ewm-service/ewm
     ports:
       - "8080:8080"
+    depends_on:
+      - ewm-db
 
   ewm-db:
     image: postgres:16.1
+    container_name: postgres-ewm
+    ports:
+      - "5436:5432"
+    environment:
+      - POSTGRES_PASSWORD=ewm-service
+      - POSTGRES_USER=ewm-service
+      - POSTGRES_DB=ewm-service
+    healthcheck:
+      test: pg_isready -q -d $$POSTGRES_DB -U $$POSTGRES_USER
+      timeout: 5s
+      interval: 5s
+      retries: 10
