--- a/ewm-service/ewm/src/main/resources/application.properties
+++ b/ewm-service/ewm/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+url=http://stats-server:9090
+
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
